--- a/Dota2App/Dota2App/en.lproj/MainStoryboard_iPad.storyboard
+++ b/Dota2App/Dota2App/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2843" systemVersion="11G63" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C3103" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="5">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1929"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller - Heroes-->
@@ -255,7 +255,7 @@
         <!--Navigation Controller - Items-->
         <scene sceneID="1hf-xI-Qg8">
             <objects>
-                <navigationController definesPresentationContext="YES" id="I4a-s5-ntI" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="ItemNav" definesPresentationContext="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="I4a-s5-ntI" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Items" image="items.png" id="5GO-E1-dGJ"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="3SK-fA-3mh">
                         <autoresizingMask key="autoresizingMask"/>
@@ -874,6 +874,91 @@
         <image name="movementSpeed.png" width="63" height="39"/>
         <image name="mp.png" width="22" height="22"/>
     </resources>
+    <classes>
+        <class className="AbilitiesViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AbilitiesViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="AbilityCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AbilityCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="abilityName" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="cd" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="cdIcon" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="icon" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="isPassiveLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="mp" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="mpIcon" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="AbilityDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AbilityDetailViewController.h"/>
+        </class>
+        <class className="AbilityVideoViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AbilityVideoViewController.h"/>
+        </class>
+        <class className="BuildsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BuildsViewController.h"/>
+        </class>
+        <class className="DetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="iconImageView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="segment" candidateClass="UISegmentedControl"/>
+            </relationships>
+        </class>
+        <class className="HeroCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/HeroCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="attributeImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="cellDetailLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="cellImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="cellTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="factionImage" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="InformationViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/InformationViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="agilityPointsLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="armorLevelOneLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="armorPointsLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="attackDurationLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="attackRangeLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="attackSpeedLevelOneLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="bioLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="bioTextView" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="castDurationLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="damageLevelOneLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="damagePointsLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="factionImageView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="heroImageView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="heroNameLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="hitPointsLevelOneLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="intelligencePointsLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="manaLevelOneLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="missileSpeedLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="movementSpeedPointsLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="primaryAttributeImageView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="roleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="sightRangeLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="strengthPointsLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="turnRateLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="ItemsTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ItemsTableViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="searchBar" candidateClass="UISearchBar"/>
+            </relationships>
+        </class>
+        <class className="MasterViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MasterViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
